# owno-backend

./: .gitignore  Makefile  README.md  docker-compose.yml  piccolo_conf.py  pyproject.toml
owno/: piccolo_app.py
owno/piccolo_migrations/: owno_2025_02_09t15_00_45_550106.py
src/: models.py  settings.py
src/core/api/: app.py  dto.py  login_router.py  resolvers.py
src/core/cache/: redis.py
tests/: test_login_router.py
